# cyanide-honeypot

./: .coveragerc  .dockerignore  .gitignore  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.PL.md  README.RU.md  README.md  SECURITY.md  docker-compose.yml  inspect_config.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties  ssh_host_key  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml  security_scan.yml  smoke_test.yml
ai_models/cyanideML/: datasetforml.json  model.py
assets/models/: cyanideML.pkl
config/: .env  cyanide.cfg
configs/: app.yaml  app.yaml.example  fs.yaml.example
configs/profiles/: fs.centos_7.yaml  fs.debian_11.yaml  fs.ubuntu_22_04.yaml
configs/profiles/archlinux/: base.yaml
configs/profiles/centos/: base.yaml  manifest.yaml
configs/profiles/debian/: manifest.yaml
configs/profiles/ubuntu/: manifest.yaml
data/processed/: atomic_red_team_mapping.jsonl  atomic_stats.json  manual_mappings.jsonl  mitre_cti_stats.json  mitre_groups.jsonl  mitre_malware.jsonl  mitre_relationships.json  mitre_tactics.jsonl  mitre_techniques.jsonl  payloads_combined.jsonl
deploy/: Dockerfile  docker-compose.yml
deployments/docker/: Dockerfile  docker-compose.yml  healthcheck.py  plugins_example.txt
deployments/monitoring/: grafana-dashboard.json  prometheus-alerts.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  OBSERVABILITY.md  README.PL.md  README.RU.md  TECHNICAL_TEST_PLAN.md  TESTING.md  ai_ml.md  caching.md  com.txt  configuration.md  core.md  core_and_proxy.md  data_paths.md  development.md  env_official.txt  fs_and_commands.md  index.md  ml.md  network.md  vfs.md
docs/core/: advanced_features.md  architecture.md  caching.md  configuration.md  core.md  deployment.md  extensibility.md  index.md  stabilization_notes.md  troubleshooting.md
docs/developer-reference/core/: core.md
docs/ml-analytics/: index.md  ml.md
docs/networking/: hardening.md  index.md  network.md
docs/services/: index.md  ssh.md  telnet.md
docs/tests/: index.md  manual.md
docs/tooling/: index.md  operations.md  plugins.md
docs/translations/: readme-pl.md  readme-ru.md
docs/user-reference/: AdvancedUsage.md  Integrations.md  ThreatIntelligence.md
docs/vfs/: index.md  profiles_guide.md  shell_emulator.md  vfs.md
etc/: cyanide.cfg
scripts/: cyanide-clean  cyanide-createfs  smoke_test_local.sh  verify_os_fidelity.py  verify_scp.py
scripts/management/: analyze_threshold.py  apply_hotfix.py  cyanide  debug_detection_logic.py  enhance_knowledge_base.py  test_hybrid_system.py  test_models_comprehensive.py
scripts/training/: benchmark.py  train.py  validate.py
share/cyanide/: fs.pickle
src/: __init__.py
src/commands/: __init__.py  base.py  cat.py  cd.py  echo.py  export.py  file_ops.py  help.py  id.py  ls.py  misc.py  ps.py  pwd.py  sudo.py  uname.py  w.py  wget.py  who.py  whoami.py
src/core/: __init__.py  config.py  fake_filesystem.py  filesystem_nodes.py  server.py  shell_emulator.py
src/cyanide/: __init__.py  logger.py  main.py
src/cyanide/configs/: app.yaml
src/cyanide/core/: __init__.py  aesthetics.py  async_logger.py  cleanup.py  config.py  config_schema.py  defaults.py  emulator.py  fs_utils.py  geoip.py  libvirt_pool.py  paths.py  security.py  server.py  sftp.py  stats.py  telemetry.py  vm_pool.py  vt_scanner.py
src/cyanide/fs/: __init__.py  pickle.py  yaml_fs.py
src/cyanide/ml/: __init__.py  classifier.py  context_analyzer.py  model.py  pipeline.py  rule_engine.py  tokenizer.py
src/cyanide/network/: __init__.py  ssh_proxy.py  tcp_proxy.py
src/cyanide/output/: __init__.py  base.py  discord.py  dshield.py  elasticsearch.py  graylog.py  hpfeeds.py  mongodb.py  mysql.py  postgresql.py  rethinkdb.py  slack.py  splunk_hec.py  sqlite.py  syslog.py  telegram.py
src/cyanide/services/: analytics.py  ioc_reporter.py  quarantine.py  session_manager.py  smtp_handler.py  telnet_handler.py
src/cyanide/tests/: conftest.py  test_config_validation.py  test_realism_v2.py  test_vm_pool.py
src/cyanide/utils/: logging_system.py
src/cyanide/vfs/: context.py  dynamic.py  engine.py  nodes.py  profile_loader.py  provider.py  rsync.py  scp.py  sftp.py
src/proxy/: ssh_proxy.py
src/utils/: __init__.py
tests/: conftest.py  manual_proxy_test.py  smoke_test.py  smoke_test.sh  test_async_logger.py  test_bot_detection.py  test_cleanup.py  test_config_validation.py  test_fake_filesystem.py  test_fs_yaml.py  test_ml_model.py  test_rate_limiting.py  test_security.py  test_server.py  test_sftp.py  test_shell_emulator.py  test_vm_pool.py  tox.ini
tests/commands/: test_alias.py  test_content.py  test_dns_security.py  test_file_ops.py  test_interactive_commands.py  test_massive_suite.py  test_nav.py  test_network.py  test_package_managers.py  test_registry_smoke.py  test_security_network.py  test_su.py  test_system.py
tests/integration/: smoke_test.py  test_advanced_verification.py  test_logging_monitoring.py  test_services.py  vfs_smoke_test.py
tests/load/: test_concurrent_sessions.py
tests/unit/: test_aesthetics.py  test_bot_detection.py  test_config_logic.py  test_config_validation.py  test_coverage_booster.py  test_dshield_output.py  test_fake_filesystem.py  test_fs_utils.py  test_libvirt_pool.py  test_log_restructuring.py  test_logger.py  test_ml_classifier_advanced.py  test_ml_logging_fix.py  test_ml_model.py  test_output_plugins.py  test_ping_command.py  test_profile_loader_extra.py  test_quarantine_service.py  test_rate_limiting.py  test_rsync_logic.py  test_scp_recursive.py  test_security.py  test_server.py  test_server_extra.py  test_server_handlers.py  test_server_logic.py  test_sftp_logic.py  test_shell_emulator.py  test_slack_output.py  test_ssh_advanced_logic.py  test_ssh_logic.py  test_ssh_proxy.py  test_telnet_handler.py  test_uname_command.py  test_virtual_file_transfers.py
tests/unit/commands/: test_awk.py  test_nav.py  (+7 more)
tools/: dataset_builder.py
var/log/: cyanide.err  cyanide.out
(+189 files in other folders)
