[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyanide"
version = "2.1.2"
description = "A high-interaction honeypot with ML-based anomaly detection."
readme = "README.md"
authors = [
  { name = "tanhiowyatt" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
requires-python = ">=3.9"

dependencies = [
    "asyncssh>=2.14.2,<3.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "prometheus_client>=0.17.0",
    "python-dotenv>=1.0.0",
    "telnetlib3>=2.0.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "requests>=2.31.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=23.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
cyanide = "cyanide.main:main"

[project.urls]
"Homepage" = "https://github.com/tanhiowyatt/cyanide"
"Bug Tracker" = "https://github.com/tanhiowyatt/cyanide/issues"
"Documentation" = "https://github.com/tanhiowyatt/cyanide/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cyanide*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --asyncio-mode=auto --color=yes --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: mark test as integration test",
    "slow: mark test as slow",
]
filterwarnings = [
    "ignore:.*ARC4 has been moved.*",
    "ignore:.*TripleDES has been moved.*",
    "ignore::cryptography.utils.CryptographyDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
known_first_party = ["cyanide"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
files = "src"

