[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cyanide"
version = "2.1.3"
description = "A high-interaction honeypot with ML-based anomaly detection."
readme = "README.md"
authors = [
  { name = "tanhiowyatt" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
requires-python = ">=3.9"

# Основные зависимости (Runtime)
dependencies = [
    "asyncssh>=2.14.2,<3.0",
    "cryptography>=46.0.5",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "prometheus_client>=0.17.0",
    "python-dotenv>=1.0.0",
    "telnetlib3>=2.0.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "requests>=2.32.4",
    "torch>=2.2.0",
    "msgpack>=1.0.0",
    # Security fixes for transitive dependencies
    "jinja2>=3.1.6",
    "urllib3>=2.6.3",
    "certifi>=2024.7.4",
    "idna>=3.7",
    "configobj>=5.0.9",
    "twisted>=24.7.0",
    "filelock>=3.13.1",
    "future>=0.18.3",
    "mlx>=0.29.3",
    "pillow>=11.1.0",
    "pynacl>=1.6.2",
    "python-multipart>=0.0.20",
    "starlette>=0.47.2",
    "streamlit>=1.37.0",
]

# Группы зависимостей для разработки (замена requirements-dev.txt)
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "freezegun>=1.2.0",
    "pytest-black>=0.3.12",
    "pytest-isort>=3.1.0",
    "pytest-mypy>=0.10.3",
    "pytest-ruff>=0.2.1",
    "black>=23.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-aiofiles>=23.1.0",
    "types-PyYAML>=6.0.12.12",
]

outputs = [
    "psycopg-binary>=3.1.0",
    "mysql-connector-python>=8.0.0",
    "pymongo>=4.5.0",
    "elasticsearch>=8.9.0",
    "rethinkdb>=2.4.9",
    "hpfeeds>=2.0.0",
]

# Точка входа для CLI (команда 'cyanide' в терминале)
[project.scripts]
cyanide = "cyanide.main:main"

[project.urls]
"Homepage" = "https://github.com/tanhiowyatt/cyanide"
"Bug Tracker" = "https://github.com/tanhiowyatt/cyanide/issues"
"Documentation" = "https://github.com/tanhiowyatt/cyanide/tree/main/docs"

# Настройка сборщика: ищем пакеты в папке src
[tool.setuptools.packages.find]
where = ["src"]
include = ["cyanide*"]

# Конфигурация Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --asyncio-mode=auto --color=yes --tb=short --black --isort --mypy --ruff"
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: mark test as integration test",
    "slow: mark test as slow",
]
filterwarnings = [
    "ignore:.*ARC4 has been moved.*",
    "ignore:.*TripleDES has been moved.*",
    "ignore::cryptography.utils.CryptographyDeprecationWarning",
    "ignore:.*Trying to unpickle estimator.*",
]

# Настройка стиля кода (Black)
[tool.black]
line-length = 100
target-version = ['py39']

# Настройка сортировки импортов (isort)
[tool.isort]
profile = "black"
known_first_party = ["cyanide"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
files = "src"

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "pytest", "_pytest.*"]
follow_imports = "skip"
ignore_errors = true


