[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cyanide-honeypot"
version = "0.0.1"
description = "A medium-interaction honeypot with ML-based anomaly detection."
readme = "README.md"
authors = [
  { name = "tanhiowyatt" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Security",
]
requires-python = ">=3.11"

dependencies = [
    "asyncssh>=2.14.2,<3.0",
    "cryptography>=46.0.6",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "prometheus_client>=0.17.0",
    "python-dotenv>=1.0.0",
    "telnetlib3>=2.0.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "requests>=2.33.0",
    "torch>=2.2.0",
    # Security fixes and required transitive pins
    "jinja2>=3.1.6",
    "urllib3>=2.6.3",
    "joblib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "freezegun>=1.2.0",
    "pytest-black>=0.3.12",
    "pytest-isort>=3.1.0",
    "pytest-mypy>=0.10.3",
    "pytest-ruff>=0.2.1",
    "black>=23.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-aiofiles>=23.1.0",
    "types-PyYAML>=6.0.12.12",
    "types-requests>=2.32.4",
]

full = [
    "psycopg-binary>=3.1.0",
    "mysql-connector-python>=8.0.0",
    "pymongo>=4.5.0",
    "elasticsearch>=8.9.0",
    "rethinkdb>=2.4.9",
    "hpfeeds>=2.0.0",
]

[project.scripts]
cyanide = "cyanide.main:main"

[project.urls]
"Homepage" = "https://github.com/tanhiowyatt/cyanide-honeypot"
"Bug Tracker" = "https://github.com/tanhiowyatt/cyanide-honeypot/issues"
"Documentation" = "https://github.com/tanhiowyatt/cyanide-honeypot/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cyanide*"]

[tool.setuptools.package-data]
"cyanide.configs" = ["*.yaml", "*.example", "*.env", "*.txt", "profiles/**/*"]
"cyanide.assets" = ["**/*"]
"cyanide.scripts" = ["**/*"]
"cyanide.tests" = ["**/*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --asyncio-mode=auto --color=yes --tb=short"
testpaths = ["src/cyanide/tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "integration: mark test as integration test",
    "slow: mark test as slow",
]
filterwarnings = [
    "ignore:.*ARC4 has been moved.*",
    "ignore:.*TripleDES has been moved.*",
    "ignore::cryptography.utils.CryptographyDeprecationWarning",
    "ignore:.*Trying to unpickle estimator.*",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
known_first_party = ["cyanide"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
files = "src"

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "pytest", "_pytest.*"]
follow_imports = "skip"
ignore_errors = true


